// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`babel/prettier-ignore/stroustrup > comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (1) > practical 1`] = `
"/**
 * prettier-ignore
 */
if (condition1) {
  foo;
}
else if (condition2) {
  bar;
}
else {
  baz;
}
"
`;

exports[`babel/prettier-ignore/stroustrup > comments that contain the phrase \`prettier-ignore\` but do not prevent formatting (2) > practical 1`] = `
"// /* prettier-ignore */
if (condition1) {
  foo;
}
else if (condition2) {
  bar;
}
else {
  baz;
}
"
`;

exports[`babel/prettier-ignore/stroustrup > ignore comment (1) > practical 1`] = `
"/* eslint-disable brace-style */
// prettier-ignore
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
/* eslint-enable brace-style */
"
`;

exports[`babel/prettier-ignore/stroustrup > ignore comment (2) > practical 1`] = `
"/* eslint-disable brace-style */
/* prettier-ignore */
if (condition1) {
  foo
} else if (condition2) {
  bar
}
else
{
  baz
}
/* eslint-enable brace-style */
"
`;

exports[`babel/prettier-ignore/stroustrup > ignore comment (3) > practical 1`] = `
"/* eslint-disable brace-style */
// prettier-ignore
export function MyComponent() {
  return (
    <div>
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
    </div>
  );
}
/* eslint-enable brace-style */
"
`;

exports[`babel/prettier-ignore/stroustrup > ignore comment (4) > practical 1`] = `
"export function MyComponent() {
  return (
    <div>
      {/* eslint-disable brace-style */}
      {/* prettier-ignore */}
      <button
        type="button"
        onClick={() => {}}
      >
        Click me
      </button>
      {/* eslint-enable brace-style */}
      <button type="button" onClick={() => {}}>
        Click me
      </button>
    </div>
  );
}
"
`;

exports[`babel/prettier-ignore/stroustrup > ignore comment (5) > practical 1`] = `
"export function MyComponent() {
  return (
    <div>
      <button
        type="button"
        /* eslint-disable brace-style */
        // prettier-ignore
        onClick={() => {}}
        /* eslint-enable brace-style */
      >
        Click me
      </button>
      <button type="button" onClick={() => {}}>
        Click me
      </button>
    </div>
  );
}
"
`;
